fixed about layout issue, updated skills section

--- a/_assets/scss/base/_typography.scss
+++ b/_assets/scss/base/_typography.scss
@@ -1,18 +1,18 @@
 //----------------------------------------------
 // Base typography
-//---------------------------------------------- 
+//----------------------------------------------
 body {
   font-family: $font;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
   line-height: $base-lineheight;
-  color: $color-port-gore;
+  color: $color-black;
   background-color: $color-white;
 }
 
 //----------------------------------------------
 // Fluid body sizing
-//---------------------------------------------- 
+//----------------------------------------------
 body {
   font-size: 100%;
 
@@ -47,7 +47,7 @@ body {
 
 //----------------------------------------------
 // Headings
-//---------------------------------------------- 
+//----------------------------------------------
 h1,
 h2,
 h3 {
@@ -64,8 +64,9 @@ h3 {
 
 //----------------------------------------------
 // H1 Theme
-//---------------------------------------------- 
-h1, %font-h1 {
+//----------------------------------------------
+h1,
+%font-h1 {
   $font-size: 4.5em;
 
   font-family: $font-mono;
@@ -84,7 +85,7 @@ h1, %font-h1 {
 
 //----------------------------------------------
 // H2 Theme
-//---------------------------------------------- 
+//----------------------------------------------
 h2 {
   $font-size: 2em;
 
@@ -101,14 +102,14 @@ h2 {
 
 //----------------------------------------------
 // H3 Theme
-//---------------------------------------------- 
+//----------------------------------------------
 h3 {
   font-size: 1.25em;
 }
 
 //----------------------------------------------
 // Paragraphs
-//---------------------------------------------- 
+//----------------------------------------------
 p {
   margin: {
     top: 0;
@@ -118,7 +119,7 @@ p {
 
 //----------------------------------------------
 // Blockquote
-//---------------------------------------------- 
+//----------------------------------------------
 q,
 blockquote {
   @extend %text-center;
@@ -154,7 +155,7 @@ cite {
 
 //----------------------------------------------
 // Misc
-//---------------------------------------------- 
+//----------------------------------------------
 small {
   font-size: $font-xsmall;
 }
@@ -182,7 +183,7 @@ mark {
 
 //----------------------------------------------
 // Selection
-//---------------------------------------------- 
+//----------------------------------------------
 ::selection {
   color: $color-white;
   background-color: $color-darkgrey;
