--- a/_assets/scss/components/_work.scss
+++ b/_assets/scss/components/_work.scss
@@ -1,8 +1,7 @@
 //----------------------------------------------
 // Work
-//---------------------------------------------- 
+//----------------------------------------------
 .work {
-
   &__container {
     display: flex;
     flex-flow: wrap;
@@ -48,21 +47,18 @@
       }
 
       .work__cryptologg {
-
         div {
           transform: scale(1.1);
         }
       }
 
       .work__vid {
-
         video {
           transform: scale(1.1);
         }
       }
 
       .work__img {
-
         img {
           transform: scale(1.1);
         }
@@ -71,7 +67,6 @@
   }
 
   &__scale {
-
     .work__vid & {
       position: absolute;
       top: 0;
@@ -145,7 +140,7 @@
 
   &__title {
     background: #111;
-    color: #FFF;
+    color: #fff;
     width: fit-content;
     margin: 15px 0;
     transform: skew(-10deg);
@@ -158,14 +153,18 @@
     }
   }
 
+  &__subtitle {
+    font-weight: 400;
+  }
+
   &__text {
     @extend .posts__text;
-    
+
     max-width: 26em;
   }
 
   &card {
     padding: 1.5em;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   }
 }
